--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Синдром упущенной выгоды.md",
+            "file": "Самооценка Увереность.md",
             "mode": "source",
             "source": false
           }
@@ -61,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 301
   },
   "right": {
     "id": "e0cd5dc8d692a4a5",
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Синдром упущенной выгоды.md",
+                "file": "Самооценка Увереность.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Синдром упущенной выгоды.md"
+                "file": "Самооценка Увереность.md"
               }
             }
           },
@@ -133,15 +133,15 @@
   },
   "active": "45c367cc6c0fba1f",
   "lastOpenFiles": [
-    "Синдром упущенной выгоды.md",
-    "Теория реализационных намерении.md",
-    "Обучение.md",
-    "Границы. Зона. Круги.md",
-    "Быть в моменте.md",
+    "Самооценка Увереность.md",
+    "Депрессия.md",
+    "Тревога.md",
+    "Вещества.md",
+    "Беспокойство.md",
     "Позитивные мыли.md",
-    "Вин Хофф.md",
     "Остановка мысли.md",
-    "Минадлина мозга.md",
-    "Негативные мысли.md"
+    "Отдых.md",
+    "Любовь к себе.md",
+    "Отношение.md"
   ]
 }
