git reset --soft HEAD^ git reset --soft HEAD~1 git reset HEAD T-psyho/Files/Гипноз. Гипнотическая Индукция Дейва Элмана. Самогипноз- сушать в аудио.mp4

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "4df8a265495a88f5",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Экзистенциальная тревога.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Экзистенциальная тревога.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,9 +99,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Экзистенциальная тревога.md"
-              }
+              "state": {}
             }
           },
           {
@@ -133,15 +126,15 @@
   },
   "active": "4df8a265495a88f5",
   "lastOpenFiles": [
-    "Экзистенциальная тревога.md",
-    "Тревога.md",
-    "Быть в моменте.md",
-    "Поток.md",
-    "Счастье PERMA.md",
-    "Ресурс.md",
-    "Беспокойство.md",
-    "Страх.md",
+    "Files/Гипнотическая индукция на расслабление и концентрацию внимания. Погружение в медитацию и гипноз.mp4",
+    "Хвала Комплименты.md",
+    "Коммуникация.md",
+    "Отношение.md",
+    "Самооценка Увереность.md",
+    "Мышечная релаксация.md",
+    "Медитация.md",
     "Мотивация.md",
-    "П.md"
+    "Осознаность.md",
+    "Бессознательное Подсознание.md"
   ]
 }
