--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "4df8a265495a88f5",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Эмоции.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -36,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "Миндалин",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -57,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 354
+    "width": 349
   },
   "right": {
     "id": "e0cd5dc8d692a4a5",
@@ -73,6 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Эмоции.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,7 +104,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "Эмоции.md"
+              }
             }
           },
           {
@@ -111,30 +118,32 @@
             }
           },
           {
-            "id": "473bd803c8ad58e0",
+            "id": "6ad6b35f686e19a3",
             "type": "leaf",
             "state": {
               "type": "side-panel-control-view",
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 303
+    "width": 303,
+    "collapsed": true
   },
   "active": "4df8a265495a88f5",
   "lastOpenFiles": [
-    "Фаза быстрого сна.md",
-    "Pasted image 20220215141545.png",
-    "Мозг и его ритмы.md",
-    "Untitled.md",
+    "Эмоции.md",
+    "Спорт.md",
     "Медитация.md",
-    "Гиппокамп.md",
+    "Гиппокамп -- Hippocampus.md",
+    "Боль.md",
+    "Striatum -- Полосатое тело.md",
     "Нейроглия. Глия.md",
-    "Синапсис.md",
-    "Нейротрансмиссия.md",
-    "IQ.md"
+    "Музыка.md",
+    "Files/music_Brain_synchonize.png",
+    "Кора больших полушарий -- Cerebral cortex.md"
   ]
 }
