--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "2ede0cce800e41d3",
+        "id": "3f09fad1ec07ca76",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тестостерон.md",
+            "file": "Дигидротестостерон.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "реду",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -57,7 +57,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тестостерон.md",
+                "file": "Дигидротестостерон.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +106,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Тестостерон.md"
+                "file": "Дигидротестостерон.md"
               }
             }
           },
@@ -126,23 +127,23 @@
             }
           }
         ],
-        "currentTab": 4
+        "currentTab": 3
       }
     ],
     "direction": "horizontal",
-    "width": 243
+    "width": 251
   },
-  "active": "2ede0cce800e41d3",
+  "active": "3f09fad1ec07ca76",
   "lastOpenFiles": [
-    "Тестостерон.md",
-    "Эндокринная система.md",
-    "Нейромедиаторы.md",
-    "Ноотропы.md",
-    "Нейротрансмиссия.md",
+    "Дигидротестостерон.md",
+    "Нейрон.md",
     "Эмоции.md",
-    "Яйчки.md",
-    "Семенники.md",
-    "Кортизол.md",
-    "Files/nihms-667134-f0001.jpg"
+    "Эустресс.md",
+    "Продукты НЗ.md",
+    "Координация - Танцы.md",
+    "Медитация.md",
+    "Минадлина мозга -- Amygdala.md",
+    "Мозг и его ритмы.md",
+    "Боль.md"
   ]
 }
