--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,5 +9,10 @@
   "livePreview": true,
   "fileSortOrder": "byModifiedTime",
   "foldHeading": true,
-  "foldIndent": true
+  "foldIndent": true,
+  "spellcheck": true,
+  "spellcheckLanguages": [
+    "en-US",
+    "ru"
+  ]
 }
