--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /.trash/
+.obsidian/app.json
+.obsidian/appearance.json
+.obsidian/community-plugins.json
+.obsidian/core-plugins.json
+.obsidian/plugins/table-editor-obsidian/data.json
+.obsidian/workspace
