--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -11,8 +11,5 @@
   "foldHeading": true,
   "foldIndent": true,
   "spellcheck": true,
-  "spellcheckLanguages": [
-    "en-US",
-    "ru"
-  ]
+  "spellcheckLanguages": null
 }
